--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ botocore==1.27.59
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
-click==8.1.3
 comm==0.1.2
 contourpy==1.0.7
 croniter==1.3.8
@@ -105,6 +104,7 @@ pyasn1-modules==0.2.8
 pyct==0.5.0
 pydantic==1.10.5
 pydeck==0.8.0
+pygame==2.3.0
 Pygments==2.14.0
 PyJWT==2.6.0
 Pympler==1.0.1
